# ex37

./: CMakeLists.txt  abstract_dictionary.hpp  bst_dictionary.hpp  bst_dictionary.tpp  dictionary_main.cpp  plotexample.py  readme.md  test_dictionary.cpp
